fix: error handling for delete

--- a/Views/Courses/Index.cshtml
+++ b/Views/Courses/Index.cshtml
@@ -54,7 +54,17 @@
     <script>
         $(function(){
             $('.table').DataTable();
-            
+
+            @if (TempData["SwalMessage"] != null)
+            {
+                <text>
+                Swal.fire({
+                    icon: '@TempData["SwalType"]',
+                    title: '@TempData["SwalMessage"]'
+                });
+                </text>
+            }
+
             $('.deleteBtn').click(function(e){
                 Swal.fire({
                     title: 'Are you sure?',
