--- a/Views/Lecturers/Index.cshtml
+++ b/Views/Lecturers/Index.cshtml
@@ -70,11 +70,11 @@
                     confirmButtonText: 'Yes, delete it!'
                     }).then((result) => {
                         if (result.isConfirmed) {
-                            Swal.fire(
-                            'Deleted!',
-                            'Your file has been deleted.',
-                            'success'
-                            );
+                            // Swal.fire(
+                            // 'Deleted!',
+                            // 'Your file has been deleted.',
+                            // 'success'
+                            // );
                             var btn = $(this);
                             var id = btn.data("id");
                             $('#lecturerid').val(id);
