--- a/Views/Classes/ManageEnrollments.cshtml
+++ b/Views/Classes/ManageEnrollments.cshtml
@@ -4,10 +4,13 @@
     ViewData["Title"] = "Manage Enrollments";
 }
 
-<h2>Manage Enrollments for @Model.Class.Time Session of @Model.Class.CourseName </h2>
-<h3>Instructor: @Model.Class.LecturerName </h3>
+<h2>Manage Enrollments for @Model.Class.CourseName <span class="badge @GetStatusClass(Model.Class.Status)">@Model.Class.Status</span> </h2>
+<h5>Instructor: @Model.Class.LecturerName </h5>
+<h5>Time: @Model.Class.Time </h5>
+<h5>Start Date: @Model.Class.StartDate.ToString("yyyy-MM-dd")</h5>
+<h5>End Date: @Model.Class.EndDate.ToString("yyyy-MM-dd")</h5>
 
-<hr/>
+<hr />
 <h3>Student List</h3>
 <table class="table">
     <thead>
@@ -18,41 +21,42 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var student in Model.Students) {
-        <tr>
-            <td>@student.FirstName</td>
-            <td>@student.LastName</td>
-            <td>
-                @* @if(student.IsEnrolled){
+        @foreach (var student in Model.Students)
+        {
+            <tr>
+                <td>@student.FirstName</td>
+                <td>@student.LastName</td>
+                <td>
+                    @* @if(student.IsEnrolled){
                     <button data-studentId="@student.Id" data-shouldEnroll="false" class="btn btn-danger enrollemntBtn" type="button">Remove</button>
                 }else{
                     <button data-studentId="@student.Id" data-shouldEnroll="true" class="btn btn-success enrollemntBtn" type="button">Add</button>
                 } *@
 
-                @{
-                    string btnText = student.IsEnrolled ? "Remove" : "Add";
-                    string btnClass = student.IsEnrolled ? "danger" : "success";
-                    bool shouldEnroll = !student.IsEnrolled;
-                }
-                <button data-studentId="@student.Id" data-shouldEnroll="@shouldEnroll" class="btn btn-@btnClass enrollemntBtn" type="button">@btnText</button>
-                
-            </td>
-        </tr>
-}
+                    @{
+                        string btnText = student.IsEnrolled ? "Remove" : "Add";
+                        string btnClass = student.IsEnrolled ? "danger" : "success";
+                        bool shouldEnroll = !student.IsEnrolled;
+                    }
+                    <button data-studentId="@student.Id" data-shouldEnroll="@shouldEnroll" class="btn btn-@btnClass enrollemntBtn" type="button">@btnText</button>
+
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
 
 <form asp-action="EnrollStudent" id="classEnrollmentForm">
-    <input type="hidden" id="classid" name="ClassId" value="@Model.Class.Id"/>
-    <input type="hidden" id="studentId" name="StudentId"/>
-    <input type="hidden" id="shouldEnroll" name="ShouldEnroll"/>
+    <input type="hidden" id="classid" name="ClassId" value="@Model.Class.Id" />
+    <input type="hidden" id="studentId" name="StudentId" />
+    <input type="hidden" id="shouldEnroll" name="ShouldEnroll" />
 </form>
 
-@section Scripts{
+@section Scripts {
     <script>
         $(function(){
             $('.table').DataTable();
-            
+
             $('.enrollemntBtn').click(function(e){
                 Swal.fire({
                     title: 'Are you sure?',
@@ -75,4 +79,18 @@
             })
         })
     </script>
+}
+
+@functions {
+    private string GetStatusClass(string status)
+    {
+        return status switch
+        {
+            "Created" => "badge-primary",
+            "Started" => "badge-success",
+            "Ended" => "badge-secondary",
+            "Cancelled" => "badge-danger",
+            _ => "badge-light"
+        };
+    }
 }
